--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -25,7 +25,9 @@
     "jsonwebtoken": "^8.3.0",
     "loadash": "^1.0.0",
     "moleculer": "^0.13.0",
-    "moleculer-web": "^0.8.0"
+    "moleculer-web": "^0.8.0",
+    "http-errors": "~1.6.2"
+
   },
   "engines": {
     "node": ">= 8.x.x"
